--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> put your webpage title here </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
-<body bgcolor="#7094db">
+<body bgcolor="#7094DB">
 Hello!
   
   <p>
