--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
 <body bgcolor="#809FFF">
-Hello!
+Hi there!
   
   <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
