--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html><head>
 <title> put your webpage title here </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-</head>
-<body>
+  <style>
+    body{color:white;}
+    </style >
+</head> 
+<body bgcolor="#6666ff">
 Hi there!
   
   <p>
