--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html><head>
 <title> put your webpage title here </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-  <style>
+  <style type=text/css>
     body{color:white;}
-    </style >
+    </style>
 </head> 
-<body bgcolor="#6666FF">
+<body bgcolor="#8C8CD9">
 Hi there!
   
   <p>
