--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html><head>
 <title> put your webpage title here </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-  <style type=text/css>
+  <style type="text/css">
     body{color:white;}
     </style>
 </head> 
 <body bgcolor="#8C8CD9">
+  <h2> My name is Julia </h2>
+  I like photography.
 Hi there!
   
   <p>
