--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body bgcolor="#8C8CD9">
   <h2> My name is Julia </h2>
   I like photography.
+  <h3> Here are some of my photos </h3>
+  <img src="SilverBlurCorrectFormat.png" height=100 alt="Silver Car"
 Hi there!
   
   <p>
