--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body bgcolor="#8C8CD9">
   <h2> My name is Julia </h2>
   I like photography.
-  <h3> Here are some of my photos </h3>
-  <img src="SilverBlurCorrectFormat.png" height=100 alt="Silver Car"
+  <h3> Here are some of my photos. </h3>
+  <img src="SilverBlurCorrectFormat.png" height=200 alt="Silver Car">
+       <img src="Fixed Bike Rack.png" height=200 alt="Bike Rack">
+       <img src ="FinishedChurchSteps.png" height=200 alt="Church Steps">
 Hi there!
   
   <p>
