--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     </style>
 </head> 
 <body bgcolor="#8C8CD9">
-  <h2> My name is Julia </h2>
+  <h2> Hi, my name is Julia </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
-  <img src="SilverBlurCorrectFormat.png" height=200 alt="Silver Car">
+  <p><img src="SilverBlurCorrectFormat.png" alt="Silver Car" 
+          style="float:right;width:42px;height:42px;">
+  </p>
+
        <img src="Fixed Bike Rack.png" height=200 alt="Bike Rack">
        <img src ="FinishedChurchSteps.png" height=200 alt="Church Steps">
-Hi there!
+
   
   <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
