--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <h2> Hi, my name is Julia </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
-  <p><img src="SilverBlurCorrectFormat.png" alt="Silver Car" 
-          style="float:right;width:42px;height:42px;">
-  </p>
-
+  <a href="default.asp">
+  <img src="SilverBlurCorrectFormat.png" alt="Silver Car">
+  </a>
        <img src="Fixed Bike Rack.png" height=200 alt="Bike Rack">
        <img src ="FinishedChurchSteps.png" height=200 alt="Church Steps">
 
