--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   I like photography.
   <h3> Here are some of my photos. </h3>
   <a href="default.asp">
-  <img src="SilverBlurCorrectFormat.png" alt="Silver Car">
+  <img src="SilverBlurCorrectFormat.png" height=200 alt="Silver Car">
   </a>
        <img src="Fixed Bike Rack.png" height=200 alt="Bike Rack">
        <img src ="FinishedChurchSteps.png" height=200 alt="Church Steps">
