--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2> Hi, my name is Julia </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
-  <a href="default.asp">
+  <a href="SilverBlurCorrectFormat.png">
   <img src="SilverBlurCorrectFormat.png" height=200 alt="Silver Car">
   </a>
        <img src="Fixed Bike Rack.png" height=200 alt="Bike Rack">
