--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
 </head> 
 <body bgcolor="#8C8CD9">
-  <h2> Hi, my name is Julia </h2>
+  <h2> Hi, my name is Julia. </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
   <a href="SilverBlurCorrectFormat.png">
