--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   I like photography.
   <h3> Here are some of my photos. </h3>
   <a href="SilverBlurCorrectFormat.png">
-  <img src="SilverBlurCorrectFormat.png" height=250 alt="Silver Car">
+    <img src="SilverBlurCorrectFormat.png" height=250 alt="Silver Car">
   </a>
-       <img src="Fixed Bike Rack.png" height=250 alt="Bike Rack">
-       <img src ="FinishedChurchSteps.png" height=250 alt="Church Steps">
-
-  
+  <a href="Fixed Bike Rack.png">
+    <img src="Fixed Bike Rack.png" height=250 alt="Bike Rack">
+  </a>
+  <a href="FinishedChurchSteps.png">
+    <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
+  </a>
+                                                                                                                       
   <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
