--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <a href="FinishedChurchSteps.png">
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
-                                                                                                                       
+  <p stlye="color:#42F4D9"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
+  <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos.                                                                                                                 
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
