--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body{color:white;}
     </style>
 </head> 
-<body bgcolor="#8C8CD9">
+<body bgcolor="#B1A4DD">
   <h2> Hi, my name is Julia. </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
@@ -19,7 +19,7 @@
   <a href="FinishedChurchSteps.png">
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
-  <p stlye="color:#42F4D9"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
+  <p style="color:#42F4D9"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
   <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos.                                                                                                                 
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
