--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
   <p style="color:'#FC83BB"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
-  <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. Take a look.
+  <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.
   <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
