--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     body{color:white;}
     </style>
 </head> 
-<body bgcolor="#B1A4DD">
-  <h2> Hi, my name is Julia. </h2>
+<body bgcolor="#A5A5A5">
+  <h2> style="text-align:center;"> Hi, my name is Julia. </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
   <a href="SilverBlurCorrectFormat.png">
@@ -20,8 +20,8 @@
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
   <p style="color:'#FC83BB"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
-  <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.
-  <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.
+  <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.<br>
+  <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.<br>
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
