--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
 </head> 
 <body bgcolor="#A5A5A5">
-  <h2> style="text-align:center;"> Hi, my name is Julia. </h2>
+  <h2 style="text-align:center;"> Hi, my name is Julia. </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
   <a href="SilverBlurCorrectFormat.png">
