--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     body{color:white;}
     </style>
 </head> 
-<body bgcolor="#A5A5A5">
-  <h2 style="text-align:center;"> Hi, my name is Julia. </h2>
+<body style="text-align:center;" bgcolor="#A5A5A5">
+  <h2> Hi, my name is Julia. </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
   <a href="SilverBlurCorrectFormat.png">
