--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="FinishedChurchSteps.png">
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
-  <p style="color: #0099CC"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
+  <p style="color: #007399"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
   <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.<br>
   <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.<br>
   <a href="WEBSITEfile.txt"> Click Here<a/><br>
