--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
   <p style="color: #007399"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
+  <table border="1" style="text-align:center;">
+    <tr>
+      <td>1</td>
+      <td>Brother</td>
+    </tr>
+    <tr> 
+      <td>2</td>
+      <td>Me</td>
+    </tr>
+  </table>
   <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.<br>
   <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.<br>
   <a href="WEBSITEfile.txt"> Click Here<a/><br>
