--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </table>
   <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.<br>
   <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.<br>
-  <a href="WEBSITEfile.txt"> Click Here<a/><br>
+  <a href="WEBSITEfile.txt"> Click Here</a><br>
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
