--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
   <p style="color: #007399"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
-  <table border="1" style="text-align:center;">
+  <table border="1" align="center" style="text-align:center;">
     <tr>
       <td>1</td>
       <td>Brother</td>
