--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <a href="FinishedChurchSteps.png">
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
-  <p style="color: #007399"> Although I enjoy photography, my older brother is <i>much</i> better. </p>
+  <p style="color: #007399"> Although I enjoy photography, my older brother is <i>much</i> better. </p><br>
+  The ranking of amateur photographers in my family is as follows:
   <table border="1" align="center" style="text-align:center;">
     <tr>
       <td>1</td>
