--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <table border="1" align="center" style="text-align:center;">
     <tr>
       <td>1</td>
-      <td>Brother</td>
+      <td>My Brother</td>
     </tr>
     <tr> 
       <td>2</td>
       <td>Me</td>
     </tr>
   </table>
-  <a href="https://www.instagram.com/rimajeffry/"><b>Here</b></a> are some of his photos. <b>Take a look</b>.<br>
+  <a href="https://www.instagram.com/rimajeffry/">Here</a> are some of his photos. <b>Take a look</b>.<br>
   <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.<br>
   <a href="WEBSITEfile.txt"> Click Here</a><br>
   <p>
