--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </tr>
   </table>
   <a href="https://www.instagram.com/rimajeffry/">Here</a> are some of his photos. <b>Take a look</b>.<br>
-  <a href="https://www.instagram.com/jrima17/">Here</a> are some of more of my photos, if you are interested.<br>
+  <a href="https://www.instagram.com/jrima17/">Here</a> are some more of my photos, if you are interested.<br>
   <a href="WEBSITEfile.txt"> Click Here</a><br>
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
