--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <a href="FinishedChurchSteps.png">
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
-  <p style="color: #007399"> Although I enjoy photography, my older brother is <i>much</i> better. </p><br>
-  The ranking of amateur photographers in my family is as follows:
+  <p style="color: #007399"> Although I enjoy photography, my older brother is <i>awesome</i> too. </p><br>
+  The list of photographers in my family is as follows:
   <table border="1" align="center" style="text-align:center;">
     <tr>
       <td>1</td>
@@ -31,8 +31,8 @@
       <td>Me</td>
     </tr>
   </table>
-  <a href="https://www.instagram.com/rimajeffry/">Here</a> are some of his photos. <b>Take a look</b>.<br>
   <a href="https://www.instagram.com/jrima17/">Here</a> are some more of my photos, if you are interested.<br>
+  <a href="https://www.instagram.com/rimajeffry/">Here</a> are some of my brother's photos as well. <b>Take a look</b>.<br>
   <a href="WEBSITEfile.txt"> Click Here</a><br>
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fjrima17.github.io%2FWebsite%2F"><img
