--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body{color:white;}
     </style>
 </head> 
-<body style="text-align:center;" bgcolor="#A5A5A5">
+<body style="text-align:center;" bgcolor="#7575A3">
   <h2> Hi, my name is Julia. </h2>
   I like photography.
   <h3> Here are some of my photos. </h3>
