--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="FinishedChurchSteps.png">
     <img src="FinishedChurchSteps.png" height=250 alt="Bike Rack">
   </a>
-  <p style="color: #007399"> Although I enjoy photography, my older brother is <i>awesome</i> too. </p><br>
+  <p style="color: #FFCCFF"> Although I enjoy photography, my older brother is <i>awesome</i> too. </p><br>
   The list of photographers in my family is as follows:
   <table border="1" align="center" style="text-align:center;">
     <tr>
